# turbines_project

./: .gitignore  README.md
.github/workflows/: turbines_publish.yml  turbines_test.yml
terraform/: outputs.tf  terraform.tf  variables.tf
terraform/tfvars/: dev.tfvars
turbines/: README.md  databricks.yml  pyproject.toml  setup.py
turbines/resources/: turbines.job.yml
turbines/scratch/: exploration.ipynb
turbines/src/: notebook.ipynb
turbines/src/turbines/: logger.py  main.py  processors.py  repository.py  utils.py
turbines/tests/: conftest.py  main_test.py  test_processors.py  test_repository.py
turbines/tests/data/: sample.csv
turbines/tests/data/sample/: part-00000-087cee11-c76f-4fa7-a3d0-d297003eb77b-c000.snappy.parquet
