[project]
name = "turbines"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Bartosz Gajda", email = "bartoszgajda55@outlook.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "databricks-connect>=16.2.0",
    "pytest>=8.3.5",
]
