[project]
name = "turbines"
dynamic = ["version"]
description = "This a Turbine project - Databricks-based Data Solution using the best Software Engineering practices"
authors = [
    { name = "Bartosz Gajda", email = "bartoszgajda55@outlook.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { search_parent_directories = true }

[dependency-groups]
dev = [
    "databricks-connect>=16.2.0",
    "pytest>=8.3.5",
]
