[project]
name = "turbines"
dynamic = ["version"]
description = "This a Turbine project - Databricks-based Data Solution using the best Software Engineering practices"
authors = [
    { name = "Bartosz Gajda", email = "bartoszgajda55@outlook.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
search_parent_directories = true
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "databricks-connect>=16.2.0",
    "pytest>=8.3.5",
]

[project.scripts]
raw_to_standardized = "turbines.main:raw_to_standardized"
standardized_to_enriched = "turbines.main:standardized_to_enriched"
enriched_to_curated = "turbines.main:enriched_to_curated"
